@@ -1,10 +1,13 @@
 package tech.buildrun.agregadorinvestimentos.dto;
 
+import tech.buildrun.agregadorinvestimentos.dto.UserDto.ProductDto;
 import tech.buildrun.agregadorinvestimentos.dto.UserDto.UserDto;
+import tech.buildrun.agregadorinvestimentos.entity.Product;
 import tech.buildrun.agregadorinvestimentos.entity.User;
 
 import java.util.List;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 public class DtoUtils {
 
@@ -20,10 +23,20 @@ public class DtoUtils {
         );
     }
 
-   public static List<UserDto> convertModelList(List<User> userList, Function<User, UserDto> converter){
-       if (userList == null) return List.of();
-       return userList.stream().map(converter).toList();
+   public static <T, R> List<R> convertModelList(List<T> modelList, Function<T, R> converter) {
+        if (modelList == null || modelList.isEmpty()) return List.of();
+        return modelList.stream().map(converter).collect(Collectors.toList());
+    }
+
+   public static ProductDto productModelToDto(Product product){
+    return new ProductDto(
+            product.getProductId(),
+            product.getName(),
+            product.getType(),
+            product.getPrice(),
+            product.getUser().getUserId());
    }
 
+   
 
 }
